--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ bcrypt = "0.9"
 actix-web = "3"
 dotenv = "0.15.0"
 serde_json = "1.0"
+env_logger = "0.8"
 serde = { version = "1.0", features = ["derive"] }
