--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aeromit"
-version = "0.0.2"
+version = "0.1.0"
 authors = ["JustSimple"]
 edition = "2018"
 
@@ -13,6 +13,7 @@ actix-web = "3"
 dotenv = "0.15.0"
 serde_json = "1.0"
 env_logger = "0.8"
+derive_more = "0.99"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 mongodb = { version = "1.1", default-features = false, features = ["async-std-runtime"] }
