--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ env_logger = "0.8"
 derive_more = "0.99"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
+validator = { version = "0.12", features = ["derive"] }
 mongodb = { version = "1.1", default-features = false, features = ["async-std-runtime"] }
