--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ futures = "0.3"
 actix-web = "3"
 dotenv = "0.15.0"
 serde_json = "1.0"
+jsonwebtoken = "7"
 env_logger = "0.8"
 rust-argon2 = "0.8"
 derive_more = "0.99"
